--- a/ModuleData/Languages/RU/EnsuredLoyalty_strings.xml
+++ b/ModuleData/Languages/RU/EnsuredLoyalty_strings.xml
@@ -12,7 +12,7 @@
 		<string id="YCgmy4haM" text="Отношения с {HERO}" />
 		<string id="YJmaYz7il" text="Верность" />
 		<!--TooltipInfoStrings-->
-		<string id="BbMvJCYUm" text="Соблюдает {?HERO_CLAN.UNDER_CONTRACT}наемнический контракт{?}клятву верности{\?} по крайней мере {REMAINING_DAYS} {?REMAINING_DAYS.PLURAL_FORM}дней{?}{?REMAINING_DAYS.OTHER_PLURAL_FORM}дня{?}день{\?}{\?}" />
+		<string id="BbMvJCYUm" text="Соблюдает {?HERO_CLAN.UNDER_CONTRACT}наемнический контракт{?}клятву верности{\?} по крайней мере {REMAINING_DAYS} {?REMAINING_DAYS.PLURAL_FORM}дней{?}{?REMAINING_DAYS.SPECIFIC_SINGULAR_FORM}дня{?}день{\?}{\?}" />
 		<string id="oYpHpgDPr" text="Верный" />
 		<string id="1TGDgTZq0" text="Довольно верный" />
 		<string id="7XAyqN3Ch" text="Сомневающийся" />
@@ -35,9 +35,9 @@
 		<!--REASON-->
 		<string id="7LsNUEwPJ" text="эта опция выключена" />
 		<string id="uTQ8JIJNf" text="на фракцию эта опция не распространяется" />
-		<string id="xnwSHHbB2" text="отношения лидера клана с {LEAVING_CLAN_KINGDOM_LEADER.NAME} {CHECK_RESULT} ({CURRENT_RELATION} out of required {REQUIRED_RELATION}){WITHHOLD_PRICE_INFO}" />
+		<string id="xnwSHHbB2" text="отношения лидера клана с {LEAVING_CLAN_KINGDOM_LEADER.NAME} {CHECK_RESULT} ({CURRENT_RELATION} из требуемых {REQUIRED_RELATION}){WITHHOLD_PRICE_INFO}" />
 		<string id="uyOFtcDGq" text="отношения лидера клана с {LEAVING_CLAN_KINGDOM_LEADER.NAME} на это не влияют, и клан выполнил минимальные обязательства" />
-		<string id="hn7Jf5Z2c" text="клан соблюдает {?LEAVING_CLAN.UNDER_CONTRACT}наемнический контракт{?}клятву верности{\?} только {DAYS_UNDER_SERVICE} {?DAYS_UNDER_SERVICE.PLURAL_FORM}дней{?}{?DAYS_UNDER_SERVICE.OTHER_PLURAL_FORM}дня{?}день{\?}{\?} из необходимых {REQUIRED_DAYS_UNDER_SERVICE}" />
+		<string id="hn7Jf5Z2c" text="клан соблюдает {?LEAVING_CLAN.UNDER_CONTRACT}наемнический контракт{?}клятву верности{\?} только {DAYS_UNDER_SERVICE} {?DAYS_UNDER_SERVICE.PLURAL_FORM}дней{?}{?DAYS_UNDER_SERVICE.SPECIFIC_SINGULAR_FORM}дня{?}день{\?}{\?} из необходимых {REQUIRED_DAYS_UNDER_SERVICE}" />
 		<!--REASON - CHECK_RESULT -->
 		<string id="qeyOXdC7w" text="недостаточно высоки" />
 		<string id="Yx08KpCot" text="достаточно высоки" />
