--- a/ModuleData/Languages/RU/MigrationTweaks_strings.xml
+++ b/ModuleData/Languages/RU/MigrationTweaks_strings.xml
@@ -5,34 +5,34 @@
 	</tags>
 	<strings>
 		<!--Player inquiry about AI joining - header-->
-		<string id="0DEJNa14n" text="A clan wishes to join your kingdom!" />
+		<string id="0DEJNa14n" text="Клан желает присоединиться к вашему королевству!" />
 		<!--Player inquiry about AI joining - body-->
-		<string id="NAlAH3pJk" text="The {JOINING_CLAN.NAME} clan is looking to join your kingdom{?JOINING_CLAN.UNDER_CONTRACT} as mercenary{?}{\?}! They have {TROOPS_DESCRIPTION} and {FIEFS_DESCRIPTION}. Their leader {RELATION} towards you. What say ye?" />
+		<string id="NAlAH3pJk" text="Клан {JOINING_CLAN.NAME} выражает желание присоединиться к вашему королевству{?JOINING_CLAN.UNDER_CONTRACT} в качестве наемника{?}{\?}! Они распологают {TROOPS_DESCRIPTION}{FIEFS_DESCRIPTION}. Их лидер настроен {RELATION} по отношению к вам. Ваш ответ?" />
 		<!--Player inquiry about AI joining - buttons-->
-		<string id="ey1dxwam7" text="Welcome them" />
-		<string id="wV0pIOvEg" text="Turn them away" />
+		<string id="ey1dxwam7" text="Принять" />
+		<string id="wV0pIOvEg" text="Отказать" />
 		<!--TROOPS_DESCRIPTION-->
-		<string id="JhJW9KQcw" text="{TROOPS} {?TROOPS.PLURAL_FORM}able warriors{?}able warrior{\?} across {WAR_PARTIES} {?WAR_PARTIES.PLURAL_FORM}war parties{?}war party{\?}" />
+		<string id="JhJW9KQcw" text="{TROOPS} {?TROOPS.PLURAL_FORM}воинами{?}{?TROOPS.SPECIFIC_SINGULAR_FORM}воинами{?}воином{\?}{\?} и {WAR_PARTIES} {?WAR_PARTIES.PLURAL_FORM}военными отрядами{?}{?WAR_PARTIES.SPECIFIC_SINGULAR_FORM}военными отрядами{?}военным отрядом{\?}{\?}" />
 		<!--FIEFS_DESCRIPTION-->
-		<string id="IA3iGGsYf" text="{FIEFS} {?FIEFS.PLURAL_FORM}fiefs{?}fief{\?} that they {?AT_WAR}will{?}won't be able to{\?} bring with them" />
-		<string id="RzO5SBUgJ" text="no fiefs" />
+		<string id="IA3iGGsYf" text=", а также {FIEFS} {?FIEFS.PLURAL_FORM}феодальными владениями, которые{?}{?FIEFS.SPECIFIC_SINGULAR_FORM}феодальными владениями, кторые{?}феодальным владением, которое{\?}{\?} {?AT_WAR}заберут{?}не заберут{\?} с собой" />
+		<string id="RzO5SBUgJ" text=". У них нет феодальных владений" />
 		<!--RELATION-->
-		<string id="x47mq54mF" text="very friendly" />
-		<string id="taaRCPcrR" text="friendly" />
-		<string id="CqcPzOwVt" text="neutral" />
-		<string id="JuvIOEmNh" text="aggravated" />
-		<string id="U3BvXUXgJ" text="hostile" />
+		<string id="x47mq54mF" text="весьма дружелюбно" />
+		<string id="taaRCPcrR" text="дружелюбно" />
+		<string id="CqcPzOwVt" text="нейтрально" />
+		<string id="JuvIOEmNh" text="отрицательно" />
+		<string id="U3BvXUXgJ" text="враждебно" />
 		<!--
 		|||||||||||||||||||||||||||| Mod Options ||||||||||||||||||||||||||||
 		-->
-		<string id="WCoiQxsow" text="Enables a variety of tweaks regarding clans migration between kingdoms. Due to the nature of these changes, they always apply to every clan in the game." />
-		<string id="13Y8NuKUS" text="Allow join requests" />
-		<string id="4ymcIHKvE" text="Specify if AI clans should consider player kingdom when they are deciding which kingdom to join or defect to." />
-		<string id="taw7SjXfx" text="Allow hire requests" />
-		<string id="wb3y7btgb" text="Specify if AI clans should consider player kingdom when they are deciding which kingdom to join as mercenaries." />
-		<string id="N0cdUV5L7" text="Player requests cooldown" />
-		<string id="mlMTdZg6M" text="The minimum period in days following a request from an AI clan to join the player's kingdom, after which a new request may appear. Default = 0 (no cooldown)." />
-		<string id="ZZKClL1sA" text="Determined kingdom pick logic" />
-		<string id="OUEwq5kM0" text="Specify if AI clans should always pick the most attractive kingdom instead of a random one when considering joining some kingdom or defecting. Enabling this can potentially increase intensity of clan migration between kingdoms." />
+		<string id="WCoiQxsow" text="Включает различные настройки, касающиеся миграции кланов между королевствами. Из-за характера этих изменений они всегда применяются к каждому клану в игре." />
+		<string id="13Y8NuKUS" text="Разрешить запросы на присоединение" />
+		<string id="4ymcIHKvE" text="Укажите, должны ли кланы ИИ рассматривать королевство игрока, когда они решают, к какому королевству присоединиться." />
+		<string id="taw7SjXfx" text="Рзрешить запросы о найме" />
+		<string id="wb3y7btgb" text="Укажите, должны ли кланы ИИ рассматривать королевство игрока, когда они решают, к какому королевству присоединиться в качестве наемников." />
+		<string id="N0cdUV5L7" text="Кулдаун на запросы к игроку" />
+		<string id="mlMTdZg6M" text="Минимальный период в днях после запроса ИИ-клана о присоединении к королевству игрока, по истечении которого может быть получен новый запрос. По умолчанию = 0 (без кулдауна)." />
+		<string id="ZZKClL1sA" text="Четко определенный порядок выбора королевства" />
+		<string id="OUEwq5kM0" text="Укажите, должны ли ИИ-кланы выбирать только наиболее привлекательное королевство вместо случайного, когда думают присоедниться или дезертировать. Включение этой опции может увеличить интенсивность миграции кланов между королевствами." />
 	</strings>
 </base>
