Russian localization tweaks

--- a/ModuleData/Languages/RU/MigrationTweaks_strings.xml
+++ b/ModuleData/Languages/RU/MigrationTweaks_strings.xml
@@ -32,7 +32,7 @@
 		<string id="wb3y7btgb" text="Укажите, должны ли кланы ИИ рассматривать королевство игрока, когда они решают, к какому королевству присоединиться в качестве наемников." />
 		<string id="N0cdUV5L7" text="Кулдаун на запросы к игроку" />
 		<string id="mlMTdZg6M" text="Минимальный период в днях после запроса ИИ-клана о присоединении к королевству игрока, по истечении которого может быть получен новый запрос. По умолчанию = 0 (без кулдауна)." />
-		<string id="ZZKClL1sA" text="Четко определенный порядок выбора королевства" />
+		<string id="ZZKClL1sA" text="Детерминированный порядок выбора королевства" />
 		<string id="OUEwq5kM0" text="Укажите, должны ли ИИ-кланы выбирать только наиболее привлекательное королевство вместо случайного, когда думают присоедниться или дезертировать. Включение этой опции может увеличить интенсивность миграции кланов между королевствами." />
 	</strings>
 </base>
