--- a/ModuleData/Languages/RU/PoliticsRebalance_strings.xml
+++ b/ModuleData/Languages/RU/PoliticsRebalance_strings.xml
@@ -36,17 +36,17 @@
 		<string id="sFWVFQSX7" text="Позволяет указать различные настройки, касающиеся проведения выборов в королевстве." />
 
 		<string id="BZnXaAO4m" text="Влияние, необходимое для переопределения решения" />
-		<string id="mhjZ7999E" text="Укажите желаемый способ расчета влияния, которое необходимо для замены популярного решения на непопулярное. Правитель может потратить очки влияния, аналогичные оказанию «Незначительной поддержки», «Значительной поддержки» или «Полной поддержки» на каждую недостающую единицу поддержки непопулярного решения, или просто использовать точное количество очков влияния, которое сторонники популярного решения потратили в сумме. В оригинале - [Заменить, используя стоимость 'Полной поддержки']. Рекомендовано [Заменить, используя точное значение влияния]." />
-		<string id="PB4s4f10m" text="Оценочный порог для ИИ, необходимый для отмены решения" />
+		<string id="mhjZ7999E" text="Правитель может потратить очки влияния, аналогичные оказанию «Незначительной поддержки», «Значительной поддержки» или «Полной поддержки» на каждую недостающую единицу поддержки непопулярного решения, или просто использовать точное количество очков влияния, которое сторонники популярного решения потратили в сумме. В оригинале [Использовать стоимость 'Полной поддержки']. Рекомендовано [Использовать точное значение влияния]. Набор букв для невидимой строки MCM." />
+		<string id="PB4s4f10m" text="Оценочный порог для отмены решения ИИ" />
 		<string id="GWUSWJ41x" text="Минимальная разница между оценкой желаемого ИИ правителем решения и оценкой популярного решения, требуемая чтобы правящий клан рассматривал возможность замены популярного решения. В оригинале - 10. По умолчанию = 50.0." />
 
 		<string id="UUhO7T6KO" text="Ребаланс системы принятия решений" />
 		<string id="rHR6gl9ef" text="Позволяет вносить корректировки в логику расчета поддержки принятия решений, используемую кланами ИИ." />
 
 		<string id="iraC4RG2n" text="Заключение мира" />
-		<string id="U1Yf34bca" text="Укажите, нужно ли улучшить логику расчета поддержки принятия решения о мире и если нужно, то как. Ситуационный фактор учитывает текущие войны и успешность войны против фракции, с которой нужно заключить мир. Фактор взаимоотношений основан на отношениях с лордами фракции, с которой нужно примириться. Фактор дани учитывает прибыль или убытки, включая репутационные, от назначенной в будущем дани." />
+		<string id="U1Yf34bca" text="Укажите, нужно ли улучшить логику расчета поддержки принятия решения о мире и если нужно, то как. Описание кждого из возможных факторов расчета можно посмотреть в разделе «Сила факторов»." />
 		<string id="nHu9iaUUB" text="Объявление войны" />
-		<string id="rAV9kYkov" text="Укажите, нужно ли улучшить логику расчета поддержки принятия решения об объявлении войны и если нужно, то как. Ситуационный фактор учитывает рейтинги силы враждующих в настоящее время королевств и королевства, которому будет объявлена война. Фактор отношений основан на отношениях с лордами королевства, которому будет объявлена война. Фактор дани учитывает количество динаров, которое королевство в настоящее время получает или вынуждено платить." />
+		<string id="rAV9kYkov" text="Укажите, нужно ли улучшить логику расчета поддержки принятия решения об объявлении войны и если нужно, то как. Описание кждого из возможных факторов расчета можно посмотреть в разделе «Сила факторов»." />
 
 		<string id="4TcdeL7Uu" text="Сила факторов" />
 		<string id="pgibaYP51" text="Заключение мира - ситуационный фактор" />
