--- a/ModuleData/Languages/RU/std_module_strings_xml.xml
+++ b/ModuleData/Languages/RU/std_module_strings_xml.xml
@@ -41,18 +41,18 @@
 		<string id="5F7vaCncU" text="Никакие системы" />
 		<string id="Tku0VzTa5" text="Все системы" />
 		<!-- Dropdown values - influence for overrides -->
-		<string id="zWf4os3fg" text="Заменить, используя точное значение влияния" />
-		<string id="3Z8OCjcgX" text="Заменить, используя стоимость 'Незначительной поддержки'" />
-		<string id="S1FwBcuBB" text="Заменить, используя стоимость 'Значительной поддержки'" />
-		<string id="vuZpjgfjv" text="Заменить, используя стоимость 'Полной поддержки'" />
+		<string id="zWf4os3fg" text="Использовать точное значение влияния" />
+		<string id="3Z8OCjcgX" text="Использовать стоимость 'Незначительной поддержки'" />
+		<string id="S1FwBcuBB" text="Использовать стоимость 'Значительной поддержки'" />
+		<string id="vuZpjgfjv" text="Использовать стоимость 'Полной поддержки'" />
 		<!-- Dropdown values - peace and war factors -->
 		<string id="LI9tc4Xuc" text="Использовать оригинальную логику" />
 		<string id="s1KlQUCzS" text="Применить ситуационный фактор" />
 		<string id="J19R7g9RJ" text="Применить фактор отношений" />
 		<string id="mYcC08wjI" text="Применить фактор дани" />
-		<string id="FmJLrbHHr" text="Применить ситуационный фактор и фактор отношений" />
-		<string id="clynUPKFE" text="Применить ситуационный фактор и фактор дани" />
-		<string id="70VVVTVQo" text="Применить фактор отношений и фактор дани" />
+		<string id="FmJLrbHHr" text="Применить факторы: ситуационный, отношений" />
+		<string id="clynUPKFE" text="Применить факторы: ситуационный, дани" />
+		<string id="70VVVTVQo" text="Применить факторы: отношений, дани" />
 		<string id="KwgG3HrlM" text="Применить все факторы" />
 
 		<!-- General settings -->
@@ -81,14 +81,14 @@
 		<string id="mAHbl2rzh" text="Бесплатное переопределние решений" />
 		<string id="CB1vpOzra" text="Переопределять исходы голосований в королевстве бесплатно. Чит! " />
 		<string id="g3xbLRIwj" text="Всегда выбирать королевство игрока" />
-		<string id="q9flKsRfV" text="Если опция &quot;Четко определенный порядок выбора королевства&quot; из ветки &quot;Настройки миграции&quot; включена, то королевство игрока всегда будет выбрано в кчестве цели для присоединения. Включение данной опции также пропускет любые проверки при присоединении. Чит!" />		
+		<string id="q9flKsRfV" text="Если опция «Детерминированный порядок выбора королевства» из ветки «Настройки миграции» включена, то королевство игрока всегда будет выбрано в кчестве цели для присоединения. Включение данной опции также пропускет любые проверки при присоединении. Чит!" />		
 		<string id="2QJJZSvAj" text="Дестабилизировать оценку присоединения к королевству" />
 		<string id="ylTfKfJtR" text="Дестабилизирует вычисление оценки целесообразности присоединения к королевству (ScoreOfClanToJoinKingdom)." />
-		<string id="jT31LaKLD" text="Модификатор оценки целесообразности присоединения к королевству" />
+		<string id="jT31LaKLD" text="Дестабилизирующий модификатор" />
 		<string id="L2S3TSjyg" text="Отрицтельный модификатор усложняет переход в другое королевство, а положительный - увеличивает его вероятность. Измеряется в миллионах. По умолчанию = 10.0." />
 		<string id="UGM3kBQaI" text="Дестабилизировать оценку целесообразности выхода из королевства" />
 		<string id="lxP0giGYl" text="Дестабилизирует оценку целесообразности выхода из королевства (ScoreOfClanToLeaveKingdom)." />
-		<string id="xZVeNSyJ7" text="Модификтор оценки целесообразности выхода из королевства" />
+		<string id="xZVeNSyJ7" text="Дестабилизирующий модификатор" />
 		<string id="4k9YXqh3E" text="Модификатор с отрицательным значением затрудняет выход кланов, а с положительным - увеличивает вероятность выхода кланов из королевств. Измеряется в миллионах. По умолчанию = 10.0." />
 	</strings>
 </base>
